--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "language-bazel",
-  "version": "0.2.3",
+  "version": "0.2.2",
   "description": "Build (bazel.io) language support for Atom",
   "keywords": [
     "Bazel",
     "Build",
     "Skylark",
-    "BUILD",
-    "Buck"
+    "BUILD"
   ],
   "repository": "https://github.com/ptsurko/language-bazel",
   "license": "MIT",
